Finalizado material design

--- a/src/app/components/template/footer/footer.component.scss
+++ b/src/app/components/template/footer/footer.component.scss
@@ -22,6 +22,8 @@
 
     .material-icons {
         color: var(--red);
-        font-size:1.5em;
+        font-size:1.4em;
+        vertical-align: middle;
+        text-align: center;
     }
 }
