--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="footer">
     <span>
-        Desenvolvido com <i class="material-icons v-middle">favorite</i> 
+        Desenvolvido com <mat-icon>favorite</mat-icon>
         por <strong>Szag<span>Ot</span></strong>
     </span>
 </mat-toolbar>
