--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,13 +1,8 @@
-<mat-toolbar class="header mat-elevation-z4">
-    <span>
-        <a>
-            <img class="logo" src="assets/img/logo.svg" alt="Logo">
-        </a>
-    </span>
-    <span class="title-group">
-        <a>
-            <i class="material-icons">home</i>
-            Preaching Service
-        </a>
-    </span>
+<mat-toolbar color="primary" class="header mat-elevation-z4">
+  <span class="title-group">
+    <button mat-icon-button class="menu-button" (click)="menuService.toogle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span class="title">Preaching Service</span>
+  </span>
 </mat-toolbar>
