--- a/src/app/components/template/header/header.component.scss
+++ b/src/app/components/template/header/header.component.scss
@@ -1,23 +1,16 @@
 .header {
     display: flex;
     align-items: center;
-
-    a { 
-        display: flex;
-        align-items: center;
-        text-decoration: none;
-    }
-
-    .logo {
-        width: 83px;
-        height:64px;
-    }
+    position: relative;
+    z-index: 99;
 
     .title-group {
-        padding-left: 25px;
+        .menu-button { 
+            margin-right: 5px;
+        }
 
-        i { 
-            padding-right: 5px;
+        .title {
+            vertical-align: middle;
         }
     }
 }
