--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -5,7 +5,7 @@
             <div class="divisory"></div>
             <label class="item form-block switch filled">
                 <input type="checkbox" name="dark_mode" [checked]="currentTheme != themes[0]" (click)="toggleTheme()">
-                <span><span class="text">Modo escuro</span></span>
+                <span><span class="text">Escuro</span></span>
             </label>
         </div>
     </nb-theme-select>
