Finalizadas correções de responsividade

--- a/src/app/@theme/styles/designsytem.css
+++ b/src/app/@theme/styles/designsytem.css
@@ -430,7 +430,7 @@ em {
 
 /* Padrões */
 
-body {
+html {
     font: 16px 'Nunito', 'Helvetica', sans-serif;
 }
 
@@ -717,7 +717,7 @@ ng2-smart-table nav.ng2-smart-pagination-nav .pagination li.active > span:focus 
     right: 0 !important;
     top: 0 !important;
     padding: 13px 0 !important;
-    font-size: 16px !important;
+    font-size: 1rem !important;
     line-height: 16px !important;
     text-align: center;
     opacity: 1 !important;
@@ -758,8 +758,8 @@ ng2-smart-table nav.ng2-smart-pagination-nav .pagination li.active > span:focus 
 input:not([type='checkbox'], [type='file']),
 textarea,
 select {
-    padding: 10px 15px !important;
-    height: 50px !important;
+    padding: 5px 10px !important;
+    height: 40px !important;
     background-color: var(--NeutralBackgroundColor) !important;
     color: var(--NeutralTextColor) !important;
     border: 1px solid #e4e4e4 !important;
@@ -824,7 +824,7 @@ select:hover {
 .form-block.filled:not(.select) label,
 .form-block.focus:not(.select) label {
     top: 8px;
-    font-size: 12px;
+    font-size: 0.75rem;
 }
 
 .form-block.focus:not(.select) label {
@@ -842,7 +842,7 @@ select:focus {
 .form-block.success label {
     top: 8px;
     color: var(--SuccessColor-75);
-    font-size: 12px;
+    font-size: 0.75rem;
 }
 
 .form-block.success input,
@@ -854,7 +854,7 @@ select:focus {
 .form-block.error label {
     top: 8px;
     color: var(--ErrorColor-100);
-    font-size: 12px;
+    font-size: 0.75rem;
 }
 
 .form-block.error input,
@@ -1212,14 +1212,14 @@ a.cke_dialog_ui_button,
 .btn.btn-small,
 a.cke_dialog_ui_button,
 [nbButton].size-small {
-    height: 40px !important;
-    padding: 0 20px !important;
+    height: 30px !important;
+    padding: 0 10px !important;
     font-size: 0.6em !important;
-    line-height: 42px !important;
+    line-height: 32px !important;
 }
 
 .cke_dialog_ui_button {
-    font-size: 10px !important;
+    font-size: 0.625rem !important;
 }
 
 .pill {
@@ -1439,7 +1439,7 @@ body.nb-theme-cosmic #styles .title-section {
 /* Cores */
 
 #styles .colors .item {
-    font-size: 12px;
+    font-size: 0.75rem;;
     text-transform: uppercase;
 }
 
@@ -1630,7 +1630,7 @@ body.nb-theme-cosmic #styles .title-section {
     position: absolute;
     right: -30px;
     top: 5px;
-    font: bold 18px monospace;
+    font: bold 1.125rem monospace;
 }
 
 .h-menu .user .name .text {
@@ -1767,7 +1767,7 @@ nb-context-menu .menu-item:last-child a {
     color: currentColor !important;
     height: 52px;
     font-family: 'Nunito', sans-serif !important;
-    font-size: 16px !important;
+    font-size: 1rem !important;
     font-weight: 400 !important;
 }
 
@@ -1810,7 +1810,7 @@ nb-context-menu .menu-item:last-child a {
 .menu-sidebar.left .menu-item .menu-icon {
     float: left;
     margin: 0 10px 0 0 !important;
-    font-size: 24px !important;
+    font-size: 1.5rem !important;
     line-height: 1 !important;
 }
 
@@ -1825,7 +1825,7 @@ nb-context-menu .menu-item:last-child a {
 .menu-sidebar.left .menu-item a .expand-state {
     position: absolute;
     right: 15px;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .nb-theme-default .menu-sidebar.left .menu-item a .expand-state {
@@ -1951,9 +1951,15 @@ nb-context-menu .menu-item:last-child a {
     border: 0 none;
 }
 
-.cards .row {
+.cards .row,
+nb-card .row {
     align-items: stretch;
-    margin: 0 -15px;
+    margin: 0 -10px !important;
+}
+
+nb-card .row [class*="col-"] {
+    padding-right: 10px !important;
+    padding-left: 10px !important;
 }
 
 .card .box canvas {
@@ -1963,10 +1969,10 @@ nb-context-menu .menu-item:last-child a {
 
 .cards .card,
 nb-card {
-    padding: 30px 15px;
+    padding: 20px 10px;
     border-radius: 5px !important;
     box-shadow: 4px 4px 8px rgb(0 0 0 / 10%) !important;
-    font: 16px 'Nunito', 'Helvetica', sans-serif !important;
+    font: 1rem 'Nunito', 'Helvetica', sans-serif !important;
     border: 0 none !important;
 }
 
@@ -1975,7 +1981,7 @@ nb-card-footer {
     font-size: 1.6em !important;
     font-weight: normal !important;
     font-family: 'Nunito', 'Helvetica', sans-serif !important;
-    padding: 0 15px 15px !important;
+    padding: 0 10px 10px !important;
     border: 0 none !important;
 }
 
@@ -1984,12 +1990,12 @@ nb-card-header nb-icon {
 }
 
 nb-card-body {
-    padding: 15px !important;
+    padding: 10px !important;
 }
 
 nb-card-footer {
     font-size: 1em !important;
-    padding: 15px 15px 0 !important;
+    padding: 0 10px !important;
 }
 
 nb-card,
@@ -2005,7 +2011,7 @@ nb-card-header {
 nb-card .btn-include {
     position: absolute !important;
     top: 20px;
-    right: 30px;
+    right: 20px;
 }
 
 nb-card .nb-info::before {
@@ -2072,7 +2078,7 @@ nb-dialog-container nb-card nb-card-header {
 }
 
 nb-dialog-container nb-card nb-card-header strong {
-    font-size: 25px !important;
+    font-size: 1.56rem !important;
     font-weight: normal !important;
     font-family: 'Nunito', 'Helvetica', sans-serif !important;
 }
@@ -2088,7 +2094,7 @@ nb-dialog-container nb-card nb-card-header i {
     float: left !important;
     margin-top: 16px !important;
     margin-right: 10px !important;
-    font-size: 32px !important;
+    font-size: 2rem !important;
 }
 
 nb-dialog-container nb-card nb-card-body,
@@ -2191,7 +2197,7 @@ ng2-smart-table td,
 ng2-smart-table th,
 ng2-smart-table tr {
     background-color: transparent !important;
-    font: 16px 'Nunito', 'Helvetica', sans-serif !important;
+    font: 1rem 'Nunito', 'Helvetica', sans-serif !important;
     color: var(--NeutralTextColor) !important;
 }
 
@@ -2217,6 +2223,9 @@ ng2-smart-table thead * {
 
 /* Tablet */
 @media (max-width: 700px) {
+    html, nb-card {
+        font-size: 14px !important;
+    }
     .h-menu .user .name {
         margin-left: 15px;
         padding-left: 0;
@@ -2233,6 +2242,10 @@ ng2-smart-table thead * {
 
 /* Celular */
 @media (max-width: 540px) {
+    html, nb-card {
+        font-size: 12px !important;
+    }
+
     .h-menu .help {
         display: none !important;
     }
