--- a/src/app/pages/users/list/user-list.component.html
+++ b/src/app/pages/users/list/user-list.component.html
@@ -2,7 +2,7 @@
     <nb-card-header>
         <nb-icon icon="people-outline"></nb-icon>
         Usuários
-        <a routerLink="/pages/users/edit/new" class="btn btn-primary btn-include"><i class="nb-plus"></i></a>
+        <a routerLink="/pages/users/edit/new" class="btn btn-primary btn-include btn-small"><i class="nb-plus"></i></a>
     </nb-card-header>
 
     <nb-card-body>
