--- a/src/app/@theme/styles/designsytem.css
+++ b/src/app/@theme/styles/designsytem.css
@@ -1974,6 +1974,8 @@ nb-card {
     box-shadow: 4px 4px 8px rgb(0 0 0 / 10%) !important;
     font: 1rem 'Nunito', 'Helvetica', sans-serif !important;
     border: 0 none !important;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 nb-card-header,
