Iniciada remoção de marca

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="fixed-container">
         <nb-card class="card" [nbSpinner]="loading" nbSpinnerSize="giant" nbSpinnerStatus="info">
             <nb-card-header>
-                <h1 class="title">E-mail Marketing Bayer</h1>
+                <h1 class="title">Testemunho por Telefone</h1>
             </nb-card-header>
             <nb-card-body>
                 <div class="login-form">
