Iniciada criação de listagem

--- a/src/app/pages/phones/preaching/preaching.component.html
+++ b/src/app/pages/phones/preaching/preaching.component.html
@@ -1,1 +1,44 @@
-<p>preaching works!</p>
+<nb-card>
+    <nb-card-header>
+        <nb-icon icon="phone-call-outline"></nb-icon>
+        Contatos
+    </nb-card-header>
+
+    <nb-card-body>
+        <div *ngIf="!progress">
+            <ng2-smart-table [settings]="settings" [source]="source" (custom)="onCustom($event, dialog_remove)">
+            </ng2-smart-table>
+        </div>
+
+        <nb-card *ngIf="progress">
+            <nb-card-body>
+                Apagando contato...
+                <div class="progress">
+                    <div class="progress-bar" [style.width]="progress + '%'">{{progress}}%</div>
+                </div>
+            </nb-card-body>
+        </nb-card>
+    </nb-card-body>
+
+    <ng-template #dialog_remove let-data let-ref="dialogRef">
+        <nb-card>
+            <nb-card-header>
+                <nb-icon icon="info"></nb-icon>
+                <strong>Apagar Usuário</strong>
+            </nb-card-header>
+            <nb-card-body class="fundo">
+                <p>
+                    Tem certeza que deseja remover o usuário<br> de <strong>ID {{ data }}</strong>?
+                </p>
+            </nb-card-body>
+            <nb-card-footer>
+                <button nbButton status="danger" size="small" (click)="onDelete(data); ref.close()">
+          <nb-icon icon="checkmark"></nb-icon> Remover
+        </button>
+                <button nbButton status="info" size="small" class="float-right" (click)="ref.close()">
+          <nb-icon icon="close"></nb-icon> Cancelar
+        </button>
+            </nb-card-footer>
+        </nb-card>
+    </ng-template>
+</nb-card>
